--- a/about.html
+++ b/about.html
@@ -8,14 +8,37 @@
 <body>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="about.css">
-<nav>
-		<a class="top_nav_item" href="index.html"> Home Page</a>
-		<a class="top_nav_item"href="projects.html">Projects</a>
-		<a class="top_nav_item"href="resume.html">Resume</a>
-		<a class="top_nav_item" href="contact.html">Contact Information</a>
-		<a class="top_nav_item" href="about.html">About me</a>
-	</nav>		<div id="page_content">
-		
+	<nav>	
+<div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="about.html">About Me</a>
+      </li>
+      
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">Action</a>
+          <a class="dropdown-item" href="#">Another action</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">Something else here</a>
+        </div>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="contact.html">Contact Me</a>
+      </li>
+       <li class="nav-item">
+        <a class="nav-link" href="resume.html">Resume</a>
+      </li>
+       <li class="nav-item">
+        <a class="nav-link" href="projects.html">Projects </a>
+
+    </li>
+    </ul>
+</div>
+</nav>
+		<div id="page_content">
 		<p id="page_title">About me</p>
 		<div id="description">
 		<img src="me.png" height="250px" width="250px">
